# ai-poetry-article-generator

./: .gitignore  README.md  generate_poem_article.py  generate_poem_image.py  main.py  optimize_painting_prompt.py  pyproject.toml  pytest.ini  test_poem_article.py  workflow_results.json
examples/: advanced_usage.py  basic_usage.py  image_generation_example.py  workflow_config_example.py
src/: __init__.py  config.py  poem_article.py  poem_image.py  prompt_optimizer.py
src/app/: __init__.py  cli.py
src/core/: __init__.py
src/core/generators/: __init__.py  base.py  poem_article.py  poem_image.py  prompt_optimizer.py
src/core/models/: poem.py
src/core/services/: image_service.py  poem_service.py  prompt_service.py
src/domain/: __init__.py  models.py
src/infrastructure/: container.py
src/infrastructure/clients/: strategy.py  zhipu_client.py
src/infrastructure/config/: __init__.py  config.py  settings.py
src/infrastructure/logging/: logger.py
src/interfaces/: base.py
src/services/: __init__.py  image_service.py  poem_service.py  prompt_service.py
src/workflow/: __init__.py  base.py  config.py  engine.py  functions.py  manager.py
src/workflow/engine/: workflow_engine.py
src/workflows/: generate_poem_article.py
src/workflows/poem_article/: __init__.py  config.py  main.py  workflow.py
src/workflows/poem_article/steps/: __init__.py  article_generation.py  client_initialization.py  environment_setup.py  image_generation.py  poem_request_build.py  result_output.py
tests/: test_ai_strategy.py  test_config.py  test_poem_article.py  test_poem_image.py  test_prompt_optimizer.py
workflow_configs/: custom_poem_workflow.json  image_generation_example.json  poem_article_config.json  poem_article_workflow.json
